--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,9 +36,8 @@ jobs:
     displayName: 'Install Node.js'
 
     - script: |
-        npm install
-        npm run build --if-present
-    displayName: 'npm install, build'
+        npm run deploy
+    displayName: 'Run deploy scripts'
 
     - task: ArchiveFiles@2
     displayName: 'Archive files'
