--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_PASSWORD: adminpass
       POSTGRES_USER: pcrsadmin
-      POSTGRES_DB: hintservice
+      POSTGRES_DB: hintservice-dev
     volumes:
       - db_data:/var/lib/postgresql/data
 
@@ -19,7 +19,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 3000:3000
+      - 3001:3001
     env_file:
       - .env
     environment:
