--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,3 +18,9 @@ jobs:
 
       - name: compose up
         run: docker compose up -d
+
+      - name: cleanup
+        run: |
+          docker image prune -f
+          docker builder prune -f
+          
